# sandbox-rust-web-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  queue_example.txt  thunder_client_tests.json
src/: auth.rs  dtos.rs  enums.rs  error.rs  facade.rs  lib.rs  main.rs  middleware.rs  model.rs  router.rs  service.rs
src/dtos/: sdk_request.rs  sdk_response.rs  web_app_request.rs  web_app_response.rs
src/facade/: sdk.rs  web_app.rs
src/model/: user.rs
src/router/: sdk.rs  web_app.rs
src/service/: access_control.rs  db.rs  environment.rs  queue.rs  user.rs
