[package]
name = "sandbox-rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
anyhow = "1.0"
thiserror = "1.0"
# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# asyncio
tokio = {version="1", features = ["full"] }
# http client
# reqwest = "0.12.2"
# http server
axum = {version = "0.7.5", features = ["macros"]}
axum-extra = {version = "0.9.3", features = ["typed-header"]}
headers ="0.4"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
# jwt
jsonwebtoken = "8.0"
# database
redis = "0.25.2"
# time
chrono = "0.4.35"
# serialization
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
# random
rand = "0.8.5"
# enums
strum = "0.26"
strum_macros = "0.26"
# itertools
itertools = "0.12.1"
# parallelization
rayon = "1.10.0"

once_cell = "1.8"