[package]
name = "sandbox-rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
anyhow = "1.0"
thiserror = "1.0"
# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-appender = "0.2.3"
# asyncio
tokio = {version="1", features = ["full"] }
# http client
# reqwest = "0.12.2"
# http server
axum = {version = "0.7.5", features = ["macros"]}
axum-extra = {version = "0.9.3", features = ["typed-header"]}
headers ="0.4"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
# jwt
jsonwebtoken = "8.0"
# time
#chrono = "0.4.35"
# serialization
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
# random
#rand = "0.8.5"
# enums
#strum = "0.26"
#strum_macros = "0.26"
# itertools
#itertools = "0.12.1"
# parallelization
#rayon = "1.10.0"
# lazy data objects
once_cell = "1.8"
# database
mongodb = "2.8.2"
# utils
regex = "1.10.4"
# endcoding
base64ct = { version = "1.6.0", features = ["alloc"] }
# queue rabbitmq
amqprs = "1.5.4"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.12.1"
mockall_double = "0.3.1"